# qsnake

./: .gitignore  CMakeLists.txt  README.md
resources/: Info.plist.in  qsnake.icns
src/: board.cpp  board.h  constants.h  food.cpp  food.h  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h  qsnake.cpp  qsnake.h  snake.cpp  snake.h
