CMAKE_MINIMUM_REQUIRED(VERSION 3.6)

PROJECT(qsnake)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)

SET(QSNAKE_SRCS
  src/food.cpp
  src/main.cpp
  src/mainwindow.cpp
  src/qsnake.cpp
  src/snake.cpp
)

SET(QSNAKE_HDRS
  src/constants.h
  src/food.h
  src/mainwindow.h
  src/qsnake.h
  src/snake.h
)

FIND_PACKAGE(Qt5Widgets REQUIRED)

IF(APPLE)
  SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/resources/qsnake.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
  SET(QSNAKE_SRCS ${QSNAKE_SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/resources/qsnake.icns)
ENDIF(APPLE)

ADD_EXECUTABLE(QSnake MACOSX_BUNDLE ${QSNAKE_SRCS} ${QSNAKE_HDRS})

TARGET_LINK_LIBRARIES(QSnake Qt5::Widgets)

MESSAGE(${CMAKE_INSTALL_PREFIX}/bin/QSnake)

SET(APPS "\${CMAKE_INSTALL_PREFIX}/bin/QSnake")
SET(DIRS ${QT_LIBRARY_DIRS})
SET(PLUGINS_DEST_DIR bin)
SET(QT_CONF_DEST_DIR bin)
IF(APPLE)
  SET(APPS "\${CMAKE_INSTALL_PREFIX}/QSnake.app")
  SET(PLUGINS_DEST_DIR QSnake.app/Contents/MacOS)
  SET(QT_CONF_DEST_DIR QSnake.app/Contents/Resources)
  SET_TARGET_PROPERTIES(QSnake PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/resources/Info.plist.in)
ENDIF(APPLE)