CMAKE_MINIMUM_REQUIRED(VERSION 3.6)

PROJECT(qsnake)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Release ... FORCE)
ENDIF()

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)

SET(APP_AUTHOR "Daniele Pantaleone")
SET(APP_COPYRIGHT "Copyright (C) 2017 Daniele Pantaleone")
SET(APP_NAME "QSnake")
SET(APP_VERSION "1.0")

ADD_DEFINITIONS(-DAPP_AUTHOR="${APP_AUTHOR}")
ADD_DEFINITIONS(-DAPP_COPYRIGHT="${APP_COPYRIGHT}")
ADD_DEFINITIONS(-DAPP_NAME="${APP_NAME}")
ADD_DEFINITIONS(-DAPP_VERSION="${APP_VERSION}")

SET(QSNAKE_CPP src/food.cpp src/main.cpp src/mainwindow.cpp src/qsnake.cpp src/snake.cpp)
SET(QSNAKE_H src/constants.h src/food.h src/mainwindow.h src/qsnake.h src/snake.h)

FIND_PACKAGE(Qt5Widgets REQUIRED)

IF(APPLE)
  SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/resources/qsnake.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
  SET(QSNAKE_CPP ${QSNAKE_CPP} ${CMAKE_CURRENT_SOURCE_DIR}/resources/qsnake.icns)
ENDIF(APPLE)

ADD_EXECUTABLE(${APP_NAME} MACOSX_BUNDLE ${QSNAKE_CPP} ${QSNAKE_H})

TARGET_LINK_LIBRARIES(${APP_NAME} Qt5::Widgets)

IF(APPLE)
  SET(MACDEPLOYQT $ENV{QT_HOME}/bin/macdeployqt)
  SET(MACDEPLOYQT_ARGS ${CMAKE_CURRENT_BINARY_DIR}/${APP_NAME}.app)
  IF(CMAKE_BUILD_TYPE MATCHES Release)
    SET(MACDEPLOYQT_ARGS ${MACDEPLOYQT_ARGS} -dmg)
  ENDIF(CMAKE_BUILD_TYPE MATCHES Release)
  SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/resources/Info.plist.in)
  ADD_CUSTOM_COMMAND(TARGET ${APP_NAME} COMMAND ${MACDEPLOYQT} ARGS ${MACDEPLOYQT_ARGS})
ENDIF(APPLE)